# APalysis

./: .dockerignore  .gitignore  .python-version  .readthedocs.yaml  Dockerfile  Makefile  README.md  demo.py  pyproject.toml  run-tf.py  run-torch.py
activation_pathway_analysis_backend/: __init__.py  apalysis_tf.py  apalysis_torch.py  app.py  pyproject.toml  requirements.txt  types.py  utils.py  utils_tf.py  utils_torch.py
activation_pathway_analysis_tool_frontend/: package-lock.json  package.json
activation_pathway_analysis_tool_frontend/src/: App.tsx  api.ts  convexHull.ts  index.tsx  types.ts  utils.ts
activation_pathway_analysis_tool_frontend/src/app/: store.ts
activation_pathway_analysis_tool_frontend/src/components/: About.tsx  Controls.tsx  DenseArgmax.tsx  GraphViewer.tsx  ImageToolTip.tsx  LayerActivations.tsx  LayerDetails.tsx  LayerNode.tsx  LazyAccordionItem.tsx  MainView.tsx  Navigation.tsx  NodeActivationHeatmap.tsx  NodeActivationMatrix.tsx  NodeImageDistances.tsx  RightView.tsx  Scatter.tsx  ScatterPlot.tsx
activation_pathway_analysis_tool_frontend/src/components/featurehunt/: HighlightedChannels.tsx  ImageSelection.tsx
activation_pathway_analysis_tool_frontend/src/features/: analyzeSlice.ts  featureHuntSlice.ts  modelSlice.ts
activation_pathway_analysis_tool_frontend/src/styles/: index.css  modal.css
analysis/: ConvexHull.R  MNIST_in_Keras.ipynb  activations.vti  clip.ipynb  complexmodel.drawio  contour_tree.ipynb  convexHull.ipynb  get_layer_outputs-tf.ipynb  get_layer_outputs_torch.ipynb  gpt2.ipynb  gradcam.ipynb  imagenet_class_to_label.py  label_count.pkl  last_cnn_activations.npy  metrics.py  mutation.ipynb  network_pruning.ipynb  nx_playground.ipynb  pathways.pkl  precompute-activation-summary.ipynb  pyproject.toml  pytorch_model_graph.html  stable_diffusion.ipynb  test.ipynb  test_whole_model.html  test_whole_model_data_flow.html  test_whole_model_hierarchy.html  types.py  utils.py  vision-transformer.ipynb  whole_model.html  whole_model_data_flow.html  whole_model_graph.html  whole_model_hierarchy.html
analysis/models-pdf/: model.gv
analysis/runs/gpt2_model/: events.out.tfevents.1727234826.insane-Linux.177092.0
analysis/torchview_model_extract/: Graph.py  model_extract.py
backend/: .gitignore  convert-tfds-to-pytorch.py  model.dot  pyproject.toml  run-tf.py  run-torch.py
backend/channelexplorer/: Graph.py  __init__.py  channelexplorer.py  metrics.py  setup.py  types.py  utils.py
backend/channelexplorer/channelexplorer_tf/: __init__.py  channelexplorer.py  channelexplorer2.py  utils.py
backend/channelexplorer/channelexplorer_torch/: __init__.py  channelexplorer.py  utils.py
docs/: channelexplorer.channelexplorer_tf.rst  channelexplorer.channelexplorer_torch.rst  channelexplorer.rst  conf.py  convert-tfds-to-pytorch.rst  index.rst  modules.rst
frontend/: craco.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend-svelte/: package.json  pnpm-lock.yaml
frontend-svelte/src/lib/: api.ts  graph.svelte.ts  stores.ts  types.ts  utils.ts
frontend-svelte/src/lib/components/: Accordion.svelte  ContainerNode.svelte  CustomEdge.svelte  FunctionNode.svelte  LayerNode.svelte  ParentCollapsed.svelte  ParentExpanded.svelte  TensorNode.svelte
frontend-svelte/src/lib/components/LayerNodes/: ContainerNode.svelte  FunctionNode.svelte  TensorNode.svelte
frontend-svelte/src/lib/components/Visualizations/: ActivationProjection.svelte  ScatterPlot.svelte
frontend-svelte/src/lib/components/WindowNodes/: TensorWindow.svelte
frontend-svelte/src/lib/utils/: utils.ts
frontend-svelte/src/routes/: +layout.svelte  +page.svelte  +page.ts  Header.svelte
frontend/src/: App.tsx  api.ts  index.tsx  tutorialSteps.ts  types.ts  utils.ts
frontend/src/app/: hooks.ts  store.ts
frontend/src/components/: About.tsx  Controls.tsx  DenseArgmax.tsx  GraphViewer.tsx  HierarchyTree.tsx  ImageToolTip.tsx  LayerActivations.tsx  LayerNode.tsx  LayerOutEdges.tsx  LazyAccordionItem.tsx  MainView.tsx  NodeActivationHeatmap.tsx  NodeActivationMatrix.tsx  NodeImageDistances.tsx  ProgressModal.tsx  RightView.tsx  ScatterPlot.tsx  SourceImageTooltip.tsx
frontend/src/components/LayerViews/: ActivationChannels.tsx  ActivationHeatmapView.tsx  DenseArgmax.tsx  HierarchyTree.tsx  JaccardSimilarityView.tsx  ScatterplotView.tsx
frontend/src/components/featurehunt/: FeatureHunt.tsx  HighlightedChannels.tsx  ImageSelection.tsx
frontend/src/features/: analyzeSlice.ts  featureHuntSlice.ts
frontend/src/styles/: about.css  control.css  index.css
frontend/src/utils/: convexHull.ts  heatmapProcessing.ts
misc/layouts/: inception-mixed.json  vgg16.json
src/: run-tf.py  run-torch.py
src/activation_pathway_analysis_backend/: apalysis_tf.py  apalysis_torch.py  redis_cache.py  utils.py  utils_tf.py  utils_torch.py
src/activation_pathway_analysis_tool_frontend/: package-lock.json  package.json
src/activation_pathway_analysis_tool_frontend/src/: App.tsx  api.ts
src/activation_pathway_analysis_tool_frontend/src/app/: store.ts
src/activation_pathway_analysis_tool_frontend/src/components/: Controls.tsx  DenseArgmax.tsx  GraphViewer.tsx  ImageToolTip.tsx  LayerActivations.tsx  LayerNode.tsx  LazyAccordionItem.tsx  Navigation.tsx  NodeActivationHeatmap.tsx  NodeActivationMatrix.tsx  NodeImageDistances.tsx  RightView.tsx  ScatterPlot.tsx  SourceImageTooltip.tsx
src/activation_pathway_analysis_tool_frontend/src/components/featurehunt/: FeatureHunt.tsx  HighlightedChannels.tsx  ImageSelection.tsx
src/activation_pathway_analysis_tool_frontend/src/features/: analyzeSlice.ts
src/activation_pathway_analysis_tool_frontend/src/styles/: activation_heatmap.css  layer_activation.css  scrollbar.css
src/docs/: activation_pathway_analysis_backend.rst  conf.py  index.rst  modules.rst  run-tf.rst  run-torch.rst
