[tool.poetry]
name = "APalysis"
version = "0.0.2"
description = ""
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/rahatzamancse/APalysis"
repository = "https://github.com/rahatzamancse/APalysis"
keywords = ["APalysis"]
packages = [
    { include = "activation_pathway_analysis_backend", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
numpy = "^1.26.3"
fastapi = "^0.108.0"
scikit-learn = "^1.3.2"
uvicorn = "^0.25.0"
tqdm = "^4.66.1"
pillow = "^10.2.0"
redis = "^5.0.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
tensorflow = "2.15"
nptyping = "^2.5.0"
beartype = "^0.16.4"
tensorflow-datasets = "^4.9.4"
keract = "^4.5.1"
matplotlib = "^3.8.2"
grandalf = "^0.8"
nltk = "^3.8.1"
pydot = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
