[tool.poetry]
name = "activation-pathway"
version = "0.1.0"
description = ""
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]
readme = "README.md"
packages = [{include = "activation_pathway"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
tensorflow = "^2.11.0"
numpy = "^1.24.1"
pandas = "^1.5.3"
tensorflow-datasets = "^4.8.2"
tqdm = "^4.64.1"
keract = "^4.5.1"
pydot = "^1.4.2"
# graphviz = "^0.20.1"
networkx = "^3.0"
scikit-learn = "^1.2.1"
# pygraphviz = "^1.10"
grandalf = "^0.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
python-multipart = "^0.0.5"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.3"
plotly = "^5.13.0"
ipywidgets = "^8.0.4"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
