[tool.poetry]
name = "activation-pathway"
version = "0.1.0"
description = ""
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]
readme = "README.md"
packages = [{include = "activation_pathway"}]

[tool.poetry.dependencies]
python = "~3.11"
tensorflow = "^2.12.0"
pandas = "^2.0.2"
tensorflow-datasets = "^4.9.2"
tqdm = "^4.65.0"
keract = "^4.5.1"
pydot = "^1.4.2"
networkx = "^3.1"
scikit-learn = "^1.2.2"
grandalf = "^0.8"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
python-multipart = "^0.0.6"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.1"
plotly = "^5.14.1"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
