[tool.poetry]
name = "channelexplorer"
version = "0.1.0"
description = ""
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
fastapi = "^0.115.4"
scikit-learn = "^1.5.2"
uvicorn = "^0.32.0"
tqdm = "^4.67.0"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
transformers = "^4.46.2"
pyvis = "^0.3.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
networkx = "^3.4.2"
onnx = "^1.17.0"
graphviz = "^0.20.3"
pydot = "^3.0.2"
beartype = "^0.19.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
